# WEBFRONTMACHINE

./: .sesskey  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
apps/: fasthtml_app.py  mobile_app.py
core/: __init__.py  models.py  processor.py  webcam_recog.py
models/: modelo_gestos.pkl
